CMAKE_MINIMUM_REQUIRED (VERSION 3.10)

PROJECT(dv_gui_opengl)

SET(DV_GUI_INCLUDES "${dv_gui_opengl_SOURCE_DIR}/include")

IF(WIN32)
	ENABLE_LANGUAGE("RC")

	IF (MSVC)
		ADD_SUBDIRECTORY("src")
		#ADD_DEFINITIONS(-D_CRT_SECURE_NO_WARNINGS)
		#ADD_DEFINITIONS(-D_WINDOWS)
		#
		#SET(CMAKE_C_FLAGS			"/W3 /utf-8")
		#SET(CMAKE_C_FLAGS_DEBUG		"/MTd /Od /Ob0 /RTC1 /Zi")
		#SET(CMAKE_C_FLAGS_RELEASE 	"/MT /O2 /Ob2 /GL /DNDEBUG")
		#
		#SET(CMAKE_CXX_FLAGS			"/std:c++20 /W3 /EHsc /utf-8")
		#SET(CMAKE_CXX_FLAGS_DEBUG	"/MTd /Od /Ob0 /RTC1 /Zi")
		#SET(CMAKE_CXX_FLAGS_RELEASE "/MT /O2 /Ob2 /GL /DNDEBUG")
		#
		#IF(CMAKE_BUILD_TYPE STREQUAL "Debug")
		#	ADD_LINK_OPTIONS("/DEBUG")
		#ELSEIF(CMAKE_BUILD_TYPE STREQUAL "Release")
		#	ADD_LINK_OPTIONS("/LTCG")
		#ENDIF()
	ELSE()
		MESSAGE(FATAL_ERROR "${CMAKE_CXX_COMPILER_ID} currently not supported.")
	ENDIF()

	
ENDIF()
