CMAKE_MINIMUM_REQUIRED (VERSION 3.10)

PROJECT(dv_gui_opengl)

SET(DV_GUI_INCLUDES "${CMAKE_CURRENT_SOURCE_DIR}/include")

IF(WIN32)
	ENABLE_LANGUAGE("RC")

	IF (MSVC)
		SET(CMAKE_WINDOWS_EXPORT_ALL_SYMBOLS ON)

		ADD_SUBDIRECTORY("src")
	ELSE()
		MESSAGE(FATAL_ERROR "${CMAKE_CXX_COMPILER_ID} currently not supported.")
	ENDIF()
ENDIF()
